[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Sprites/checkerboard.png" type="Texture" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Interface" parent="." instance=ExtResource( 1 )]

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AlivePointsTimer" type="Timer" parent="."]
one_shot = true

[node name="DifficultyTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="ObjectContainer" type="Node" parent="."]

[node name="Background" type="Node2D" parent="."]
z_index = -2

[node name="Sprite" type="TextureRect" parent="Background"]
margin_left = -7.07104
margin_top = -10.9602
margin_right = 7992.93
margin_bottom = 4489.04
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
